--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -76,6 +76,10 @@
             </div>
         </div>
     </div>
+    <h1 class="text-center mt-5">Overview</h1>
+    <div class="overview">
+       {{excursions.description|safe}}
     </div>
+
 </section>
 {% endblock content %}
