--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -26,7 +26,7 @@
       {% include "socialaccount/snippets/login_extra.html" %}
 
       {% endif %}
-      <h3 class="form-title">Sign In</h3>
+      <h3 class="form-title">Sign In with a form</h3>
 
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
